[gd_scene load_steps=4 format=3 uid="uid://tsc6hpqmn311"]

[ext_resource type="Script" path="res://prefabs/skill_choice_menu.gd" id="1_8legs"]
[ext_resource type="Theme" uid="uid://cf30dh5ckboaf" path="res://skill_choice_menu.tres" id="1_inl1i"]
[ext_resource type="Texture2D" uid="uid://wsu0j0pnm3mu" path="res://assets/large/card_a_c2_large.png" id="3_ud6ng"]

[node name="skill_choice_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8legs")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 5.0
offset_right = -3.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.239216)

[node name="skill_holder" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -15.5
offset_right = 44.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="CardAC2Large" type="Sprite2D" parent="skill_holder"]
position = Vector2(41.5, 28.5)
scale = Vector2(0.307692, 0.286304)
texture = ExtResource("3_ud6ng")

[node name="select_skill_option_1" type="Button" parent="skill_holder/CardAC2Large"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -195.0
offset_top = -303.0
offset_right = -195.0
offset_bottom = -303.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_inl1i")
theme_override_font_sizes/font_size = 60
text = "ESCOLHER"

[node name="skill_holder2" type="VBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2

[node name="CardAC2Large2" type="Sprite2D" parent="skill_holder2"]
position = Vector2(-13, 31.5)
scale = Vector2(0.307692, 0.286304)
texture = ExtResource("3_ud6ng")

[node name="select_skill_option_2" type="Button" parent="skill_holder2/CardAC2Large2"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -195.0
offset_top = -300.38
offset_right = -195.0
offset_bottom = -300.38
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_inl1i")
theme_override_font_sizes/font_size = 60
text = "ESCOLHER 2"

[node name="skill_holder3" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 111.0
grow_vertical = 2

[node name="CardAC2Large3" type="Sprite2D" parent="skill_holder3"]
position = Vector2(113, 13)
scale = Vector2(0.307692, 0.286304)
texture = ExtResource("3_ud6ng")

[node name="select_skill_option_3" type="Button" parent="skill_holder3/CardAC2Large3"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -195.0
offset_top = -303.0
offset_right = -195.0
offset_bottom = -303.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_inl1i")
theme_override_font_sizes/font_size = 60
text = "ESCOLHER 3"

[connection signal="pressed" from="skill_holder/CardAC2Large/select_skill_option_1" to="." method="_on_select_skill_option_1_pressed"]
[connection signal="pressed" from="skill_holder2/CardAC2Large2/select_skill_option_2" to="." method="_on_select_skill_option_2_pressed"]
[connection signal="pressed" from="skill_holder3/CardAC2Large3/select_skill_option_3" to="." method="_on_select_skill_option_3_pressed"]
